[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Die2.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=5]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=11]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 40, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 80, 2, 60 )

[sub_resource type="OpenSimplexNoise" id=7]
seed = 9
octaves = 5
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=8]
seamless = true
noise = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.384314, 0.623529, 0, 1 )
albedo_texture = SubResource( 8 )
roughness_texture_channel = 4

[sub_resource type="BoxShape" id=5]
extents = Vector3( 60, 50, 1 )

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.0784314, 0.439216, 0.560784, 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 14 )
size = Vector3( 120, 100, 2 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 20, 100, 40 )

[sub_resource type="SpatialMaterial" id=15]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=16]
material = SubResource( 15 )
size = Vector3( 40, 200, 80 )

[sub_resource type="BoxShape" id=25]
extents = Vector3( 13, 40, 40 )

[sub_resource type="BoxShape" id=26]
extents = Vector3( 10, 40, 40 )

[sub_resource type="Curve3D" id=18]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 17.8803, -0.0252533, 9.01824, 0, 0, 0, 0, 0, 0, 64.7279, -0.0162048, 9.05046, 0, 0, 0, 0, 0, 0, 64.3062, -0.286636, 50.6567, 0, 0, 0, 0, 0, 0, 17.7498, -0.283752, 50.6029, 0, 0, 0, 0, 0, 0, 17.8803, -0.0252533, 9.01824 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
spawn_scene = ExtResource( 3 )

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 12 )

[node name="Retry" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -116.0
margin_right = 191.5
margin_bottom = 116.0
alignment = 1

[node name="Label" type="Label" parent="UserInterface/Retry/VBoxContainer"]
margin_top = 4.0
margin_right = 383.0
margin_bottom = 63.0
text = "Like Rocket League But With Dice
"

[node name="HSeparator" type="HSeparator" parent="UserInterface/Retry/VBoxContainer"]
margin_top = 67.0
margin_right = 383.0
margin_bottom = 71.0

[node name="Play" type="Label" parent="UserInterface/Retry/VBoxContainer"]
margin_top = 75.0
margin_right = 383.0
margin_bottom = 227.0
text = "
P1: WASD and SPACEBAR
P2: IJKL and SHIFT
ESC to hide
ENTER to play"
align = 1

[node name="Score" type="HBoxContainer" parent="UserInterface"]
margin_left = 20.0
margin_top = 10.0
margin_right = 147.0
margin_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UserInterface/Score"]
margin_top = 1.0
margin_right = 65.0
margin_bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0 vs 0"
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="UserInterface/Score"]
margin_left = 69.0
margin_right = 73.0
margin_bottom = 30.0

[node name="TimerLabel" type="Label" parent="UserInterface/Score"]
margin_left = 77.0
margin_top = 1.0
margin_right = 106.0
margin_bottom = 29.0
text = "60"

[node name="Label" type="Label" parent="UserInterface"]
margin_right = 40.0
margin_bottom = 28.0

[node name="GameTimer" type="Timer" parent="."]
wait_time = 61.0
one_shot = true
autostart = true

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 40, 0, 30 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 70 )
fov = 50.0
size = 50.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 40, 50, 30 )
light_color = Color( 0.658824, 0.423529, 0.815686, 1 )
shadow_enabled = true
shadow_color = Color( 0.196078, 0, 0.333333, 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 13.9955, 30 )
shadow_enabled = true
shadow_color = Color( 0.407843, 0, 0, 1 )
omni_range = 60.0
omni_attenuation = 0.233258

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, -1, 30 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = SubResource( 9 )

[node name="WallTop" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 48, -1 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="WallTop"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="WallTop"]
mesh = SubResource( 6 )
material/0 = null

[node name="WallBottom" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 48, 61 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="WallBottom"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="WallBottom"]
mesh = SubResource( 6 )
material/0 = null

[node name="GoalLeft" type="StaticBody" parent="." groups=["goals"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 30 )
collision_layer = 4
collision_mask = 0

[node name="Floor" type="CollisionShape" parent="GoalLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0 )
shape = SubResource( 13 )

[node name="FloorMesh" type="MeshInstance" parent="GoalLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0 )
mesh = SubResource( 16 )
material/0 = null

[node name="GoalLeftArea" type="Area" parent="GoalLeft"]

[node name="CollisionShape" type="CollisionShape" parent="GoalLeft/GoalLeftArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 39, 0 )
shape = SubResource( 25 )

[node name="GoalRight" type="StaticBody" parent="." groups=["goals"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 1, 30 )
collision_layer = 4
collision_mask = 0

[node name="Floor" type="CollisionShape" parent="GoalRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )
shape = SubResource( 13 )

[node name="FloorMesh" type="MeshInstance" parent="GoalRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )
mesh = SubResource( 16 )
material/0 = null

[node name="GoalRightArea" type="Area" parent="GoalRight"]

[node name="CollisionShape" type="CollisionShape" parent="GoalRight/GoalRightArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 39, 0 )
shape = SubResource( 26 )

[node name="Player" parent="." groups=["players"] instance=ExtResource( 1 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 30, 5, 30 )
collision_mask = 6

[node name="Player2" parent="." groups=["players"] instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 50, 5, 30 )
collision_mask = 6

[node name="SpawnPath" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
curve = SubResource( 18 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8803, -0.0252533, 9.01824 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="body_entered" from="GoalLeft/GoalLeftArea" to="UserInterface/Score/ScoreLabel" method="_on_GoalLeftArea_body_entered"]
[connection signal="body_entered" from="GoalRight/GoalRightArea" to="UserInterface/Score/ScoreLabel" method="_on_GoalRightArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
